# PLACAS_EC

./: .env.example  .flake8  .gitignore  Dockerfile  ECPlacas.bat  ECPlacas.py  README.md  docker-compose.yml  fix_encoding.py  fix_project.py  pyproject.toml  requirements.txt  run_automation.bat  run_backend.py  run_frontend.py
.github/workflows/: ci.yml
backend/: .env  __init__.py  app copy 2.py  app copy.py  app.py  db.py  models.py  safe_logger.py  scraper.py  utils.py
backend/database/: ecplacas.sqlite  migration_report_20250617_230728.json  schema.sql
backend/database/backups/: ecplacas_backup_1749909126.sqlite  ecplacas_pre_migration_20250617_230657.sqlite  ecplacas_pre_migration_20250618_004448.sqlite
backend/routes/: __init__.py  admin_routes.py  api_routes.py  frontend_routes.py
config/: config.py  setup_report.json
database/: ecplacas.sqlite  ecplacas.sqlite-shm  ecplacas.sqlite-wal
docs/: estrategia_ramificacion.md  informe_examen.tex  informe_proyecto.tex  plan_mantenimiento.md
frontend/: admin.html  index.html
frontend/css/: main.css
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: run_exam_tasks.py
tests/: __init__.py  conftest.py  test_ecplacas.py
